src/test/ui/error-codes/E0659.stderr
error[E0659]: `foo` is ambiguous
  --> $DIR/E0659.rs:15:5
   |
LL |     collider::foo(); //~ ERROR E0659
   |     ^^^^^^^^^^^^^
   |
note: `foo` could refer to the name imported here
  --> $DIR/E0659.rs:10:13
   |
LL |     pub use moon::*;
   |             ^^^^^^^
note: `foo` could also refer to the name imported here
  --> $DIR/E0659.rs:11:13
   |
LL |     pub use earth::*;
   |             ^^^^^^^^
   = note: consider adding an explicit import of `foo` to disambiguate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
